# BioProfileKit

./: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
docs/: index.html  numeric_data.html
docs/static/css/: cb.css
src/: app.py  setup.py
src/pages/: home.py
src/qc_eda/basic/: general.py  measurement_enum.py  numerical_data.py  sequence_enum.py  statistics.py  taxonomy_validator.pyx  wrapper_utils.pyx
src/qc_eda/biological/: biological_data.py  functional_annotation.py  measurement_data.py  taxonomy.py  taxonomy_validator.pyx
src/static/css/: bootstrap.css  cb.css
src/templates/: LandingPage.jinja  Overview.jinja  about.html  columns.jinja  contact.html  general_statistics.jinja  index.html  numeric_data.html  numeric_overview.jinja  services.html
src/utils/: download_metadata.py  file_reader.py
